@@ -1,4 +1,4 @@
-2021-02-19 Philipp Klaus Krause <pkk AT spth.de>
+2021-03-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
 	  Fix another issue related to bug #3181.
@@ -6,6 +6,8 @@
 	  exg, exgw handling cleanup, picked from patch #363 by Visenri.
 	* support/regression/tests/rotate2.c:
 	  Tests for rotation and swap, picked from patch #363 by Visenri.
+	* sdas/linksrc/lksdcdb.c:
+	  Fix a debug info issue, patch #346 by Benedikt Kleiner.
 
 2021-03-02 Maarten Brock <sourceforge.brock AT dse.nl>
 
